# System_of_linear_equations

./: CMakeLists.txt  CMakePresets.json
1/: progonka_method.cpp
src/: CMakeLists.txt  tomas.hpp  vector_oper.cpp
src/CSR/: csr.cpp  csr.hpp
src/QR/: qr.hpp
src/Solvers/: ChebishevIterationSolver.cpp  ChebyshevAcceleration.hpp  GaussSeidelSolver.cpp  GaussSeidelSolver.hpp  JacobiSolver.cpp  JacobiSolver.hpp  SimpleIterationSolver.cpp  SimpleIterationSolver.hpp  SymmetricGaussSeidel.cpp  SymmetricGaussSeidel.hpp
src/matrix/: matrix.cpp  matrix.hpp
src/matrix/QR/: qr.cpp  qr.hpp  qr_solve.cpp  qr_solve.hpp
src/tomas/: tomas.cpp  tomas.hpp
tests/: CMakeLists.txt  test_ChebishevIter.cpp  test_GaussSeidel.cpp  test_Jacobi.cpp  test_SimpleIter.cpp  test_chebyshev_accel.cpp  test_csr.cpp  test_qr.cpp  test_tomas.cpp
theory/: comp.py  comp_CSR_matrix.cpp  test_1.cpp
theory/Solvers/: solvers_bench.cpp
theory/simmetric/: bench_sim.cpp  convergence.csv
